--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
 <h3>Score: <span id="result"></span></h3>
 
-<div id="grid"></div>
+<div class="grid"></div>
 
     <script src="app.js"></script>
 </body>
